tests/samples/valid/length_of_array_by_pointer.pn
fn length_of(x: &[]u8) -> usize
{
	var y = length_of__impl(&x);
	return: y
}

fn length_of__impl(x: &[]u8) -> usize
{
	var y = |x|;
	return: y
}

fn main() -> usize
{
	var x = [55, 66, 0x00];
	var z = length_of(&x);
	var result = 197 + z;
	return: result
}
