tests/samples/invalid/outscoped_variable.pn
fn main() -> i32
{
	{
		var x: i32 = 13;
	}

	return:
	x
}
